workspace = { members = [ "config", "metrics", "network", "packets", "parser"] }

[package]
name = "rshark"
version = "0.1.0"
edition = "2021"

[dependencies]
network = { path = "network" }
config = { path = "config" }
packets = { path = "packets" }
metrics = { path = "metrics" }
parser = { path = "parser" }
env_logger = "0.11.5"
log = "0.4.22"
tokio = { version = "1.39.3", features = ["full"] }
pnet = "0.35.0"