[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
packets = { path = "../packets" }
pnet = "0.35.0"
env_logger = "0.11.5"
tokio = "1.39.2"
log = "0.4.22"