[package]
name = "packets"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "../config" }
pnet = "0.35.0"
env_logger = "0.11.5"
tokio = { version = "1.39.3", features = ["full"] }
log = "0.4.22"
pnet_macros_support = "0.35.0"
pnet_macros = "0.35.0"
pnet_packet = "0.35.0"
bytes = "1.6.0"

