[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config =  { path = "../config" }
tokio = { version = "1", features = ["full"] }
packets = { path = "../packets" }
log = "0.4.22"
network = { path = "../network" }